--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anotaaiApp",
+  "name": "appteste",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -22,13 +22,16 @@
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/sqlite": "^5.8.0",
+    "@ionic-native/sqlite-porter": "^5.8.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "cordova-android": "8.0.0",
+    "cordova-sqlite-storage": "^3.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
-    "sdk": "^0.5.0",
     "tslib": "^1.9.0",
+    "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.1.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -41,14 +44,13 @@
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.5.1",
-    "@ionic/app-scripts": "^3.2.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~12.0.0",
     "codelyzer": "~4.5.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^4.1.0",
+    "cordova-plugin-ionic-webview": "^4.1.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -67,6 +69,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
+      "cordova-sqlite-storage": {},
+      "uk.co.workingedge.cordova.plugin.sqliteporter": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
